@@ -40,8 +40,7 @@ Standard library:
 * String: new function "map" (PR#3888)
 
 Bug Fixes:
-* PR#5467: no extern "C" into ocaml C-stub headers
-- PR#4549: Filename.dirname is not handling multiple / on Unix
+* PR#4549: Filename.dirname is not handling multiple / on Unix
 - PR#4869: rare collisions between assembly labels for code and data
 - PR#4880: "assert" constructs now show up in the exception stack backtrace
 - PR#5313: ocamlopt -g misses optimizations
@@ -62,6 +61,8 @@ Feature wishes:
 - PR#5411: new directive for the toplevel: #load_rec
 - PR#5420: Unix.openfile share mode (Windows)
 - PR#5454: Digest.compare is missing and md5 doc update
+- PR#5476: bug in native code compilation of let rec on float arrays
+- PR#5467: no extern "C" into ocaml C-stub headers
 
 Shedding weight:
 * Removed the obsolete native-code generators for Alpha, HPPA, IA64 and MIPS.
